# GLUE-fw

./: .coveragerc  .gitignore  .windsurfrules  ALPHA_RELEASE_TASKS.md  CHANGELOG.md  GLUE_Framework_Deep_Analysis.md  GLUE_Framework_software_Planning.md  LICENSE  README.md  auto_activate.sh  output.txt  pyproject.toml  pytest.ini  requirements.txt  response.txt  run_glue.py
.github/workflows/: alpha-release.yml  lint.yml  python-package.yml  tests.yml
.windsurf/rules/: glue-wrapped-around-agno.md
docs/: Agent_loops.md  Agno + GLUE .md  Current_stage.txt  GLUE tools_adhesive advice by claude 3.7 thinking - plus brutally honest review of the adhesives and suggestions for change.md  GLUE_Smolagents_Abstraction_Mapping.md  GLUE_Smolagents_Features_Inventory.md  GLUE_Smolagents_Integration_Plan.md  GLUE_Smolagents_Integration_Tasks.md  MCP_creation.md  README.md  RELEASE_PLAN.md  The GLUE Protocol - LLM Feedback.md  agno_integration_plan.md  codebase_analysis.md  feature_focus_guide.md  glue_agno_integration_plan_details.md  glue_agno_integration_plan_part1.md  glue_forge.md  mcp_creation_explanation.md  portkey_integration.md  portkey_strategy.md  quicknotes.md  smolagents_docs.txt  testing_guidelines.md  useAgno.md
examples/: agent_communication.glue  agent_communication.py  agnotest.glue  chat_assistant.glue  gemini_test.glue  hierarchical_team.glue  multi_agent_team.glue  multi_team_app.glue  portkey_example.py  pydantic_tool_test.glue  research_assistant.glue
existing_project/: .gitignore  README.md  app.glue
persistent_memory/: research.json
scripts/: test_package.py
src/glue/: cli.py  cliHelpers.py  enums.py  main.py  prompts.py  version.py
src/glue/core/: __init__.py  adhesive.py  agent.py  agent_loop.py  app.py  flow.py  (+25 more)
testing/: README.md  app.glue
tests/: conftest.py  test_adhesive.py  test_agent_adhesive_control.py  test_agent_loop_report.py  test_agent_loop_report_params.py  test_app_smoke.py  test_cli.py  test_format_result.py  test_glue_smolagent_multistep.py  test_hierarchy.py  test_json_schemas.py  test_member_loop.py  test_member_loop_stub.py  test_message_normalization.py  test_orchestrator_retry.py  test_persistence.py  test_sandbox.py  test_smolagents_integration.py  test_team_orchestration.py  test_teams.py  test_teams_edge_cases.py  test_teams_smoke.py
tests/integration/: test_agno_base.py  test_agno_end_to_end.py  test_cli.py  test_prompt_engineering.py
tests/unit/: test_agent_loop.py
(+109 files in other folders)
