[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glue-fw"
version = "0.1.0"
description = "GenAI Linking & Unification Engine - A framework for building multi-model AI applications"
authors = [
    {name = "GLUE Framework Team", email = "developers@paradiselabs.co"}
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=1.10.8,<2.0.0",
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0",
    "logging>=0.4.9",
    "argparse>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
glue = "glue.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
