[build-system]
requires = ["setuptools>=61.0", "wheel", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glue-fw"
version = "0.1.0-alpha"
description = "GenAI Linking & Unification Engine - A framework for building multi-model AI applications"
readme = "README.md"
authors = [
    {name = "GLUE Framework Team", email = "developers@paradiselabs.co"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/paradiselabs-ai/GLUE-fw"
"Bug Tracker" = "https://github.com/paradiselabs-ai/GLUE-fw/issues"

[project.scripts]
glue = "glue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["glue*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
